# SearchAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/: json_example.py  markdown_example.py  stock_news.py
search_ai/: __init__.py  async_searcher.py  extractor.py  filters.py  parse.py  proxy.py  search_result.py  searcher.py  utils.py
tests/: test_filters.py  test_proxy.py  test_search_results.py
